feat: add sign in endpoint

--- a/SharedShoppingList.API/appsettings.json
+++ b/SharedShoppingList.API/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "JWT": {
+        "Audience": "http://localhost:4200",
+        "Issuer": "https://localhost:443",
+        "AccessTokenLifespanInHours": "3"
     }
-  },
-  "AllowedHosts": "*"
 }
