--- a/SharedShoppingList.API/SharedShoppingList.API.csproj
+++ b/SharedShoppingList.API/SharedShoppingList.API.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Contrib.Autofac.DependencyInjection" Version="6.1.0" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -24,16 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Behaviors\" />
-    <Folder Include="Application\Commands\" />
-    <Folder Include="Application\Dtos\" />
-    <Folder Include="Application\Entities\" />
     <Folder Include="Application\ViewModels\" />
-    <Folder Include="Application\Validators\" />
     <Folder Include="Data\Configuration\" />
     <Folder Include="Data\Repositories\" />
-    <Folder Include="Infrastructure\Exceptions\" />
-    <Folder Include="Infrastructure\MapperProfiles\" />
   </ItemGroup>
 
 </Project>
