feat: add refresh token generation

--- a/SharedShoppingList.API/appsettings.json
+++ b/SharedShoppingList.API/appsettings.json
@@ -1,14 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "JWT": {
-        "Audience": "http://localhost:4200",
-        "Issuer": "https://localhost:443",
-        "AccessTokenLifespanInHours": "3"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "Audience": "http://localhost:4200",
+    "Issuer": "http://localhost:5000",
+    "AccessTokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
+  }
 }
