chore: update developer environment

--- a/SharedShoppingList.API/appsettings.Development.json
+++ b/SharedShoppingList.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "JWT": {
+    "AccessTokenValidityInMinutes": 120
+  },
+  "Urls": "http://+5000;https://+:5001"
 }
