feat: configura Kestrel url

--- a/SharedShoppingList.API/appsettings.json
+++ b/SharedShoppingList.API/appsettings.json
@@ -1,15 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "JWT": {
+        "Audience": "http://localhost:4200",
+        "Issuer": "http://localhost:5000",
+        "AccessTokenValidityInMinutes": 1,
+        "RefreshTokenValidityInDays": 7
+    },
+    "Kestrel": {
+        "EndPoints": {
+            "Http": {
+                "Url": "http://+:80"
+            }
+        }
     }
-  },
-  "AllowedHosts": "*",
-  "JWT": {
-    "Audience": "http://localhost:4200",
-    "Issuer": "http://localhost:5000",
-    "AccessTokenValidityInMinutes": 1,
-    "RefreshTokenValidityInDays": 7
-  }
 }
