--- a/SharedShoppingList.Client/package.json
+++ b/SharedShoppingList.Client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.8",
     "@angular/router": "^14.2.8",
     "primeicons": "^6.0.1",
+    "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
