--- a/SharedShoppingList.Client/angular.json
+++ b/SharedShoppingList.Client/angular.json
@@ -56,6 +56,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/styles"]
+            },
             "scripts": []
           },
           "configurations": {
