--- a/SharedShoppingList.Client/package.json
+++ b/SharedShoppingList.Client/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.2.8",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@ngxs/storage-plugin": "^3.7.5",
+    "@ngxs/store": "^3.7.5",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^14.2.7",
     "@angular/cli": "^14.2.7",
     "@angular/compiler-cli": "^14.2.8",
+    "@ngxs/devtools-plugin": "^3.7.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
