--- a/SharedShoppingList.Client/package.json
+++ b/SharedShoppingList.Client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.8",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.8",
     "@angular/compiler": "^14.2.8",
     "@angular/core": "^14.2.8",
@@ -22,6 +23,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/storage-plugin": "^3.7.5",
     "@ngxs/store": "^3.7.5",
+    "ngx-scrollbar": "^10.0.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
