--- a/SharedShoppingList.Client/package.json
+++ b/SharedShoppingList.Client/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/storage-plugin": "^3.7.5",
     "@ngxs/store": "^3.7.5",
+    "ngx-scrollbar": "^10.0.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
